--- a/.feishu.env.sample
+++ b/.feishu.env.sample
@@ -1,6 +1,6 @@
-FEISHU_APP_SECRET= appid
-FEISHU_ENCRYPT_KEY= key
-FEISHU_VERIFICATION_TOKEN= token
-FEISHU_BOT_PATH= /
+FEISHU_APP_ID= cli_a54ebbe665b9d00c
+FEISHU_APP_SECRET= 9iLN3wzMdTa6vXPLUTzYNgxsJXZ70EI8
+FEISHU_ENCRYPT_KEY=TBG4oYF5iJnStSucOcoGmcXUGg8o1aRM
+FEISHU_VERIFICATION_TOKEN=TBG4oYF5iJnStSucOcoGmcXUGg8o1aRM
+FEISHU_BOT_PATH=/
 FEISHU_BOT_PORT= 8081
-FEISHU_APP_ID= aaaa
